Dogfooding omero interaction: use URI instead of URL because omero: doesn't work as a URL, other small issues