@@ -15,8 +15,8 @@ package org.cellprofiler.imageset;
 import static org.junit.Assert.*;
 
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Map;
 
 import org.junit.Test;
@@ -26,33 +26,30 @@ public class TestFileNameMetadataExtractor {
 	public void testFileURL() {
 		final String filename = "foo.jpg";
 		File path = new File(new File(System.getProperty("user.home")), filename);
-		try {
-			ImageFile imageFile = new ImageFile(path.toURI().toURL());
-			FileNameMetadataExtractor extractor = new FileNameMetadataExtractor(new MetadataExtractor<String>() {
+		ImageFile imageFile = new ImageFile(path.toURI());
+		FileNameMetadataExtractor extractor = new FileNameMetadataExtractor(new MetadataExtractor<String>() {
 
-				public Map<String, String> extract(String source) {
-					assertEquals(source, filename);
-					return emptyMap;
-				}
-			});
-			extractor.extract(imageFile);
-		} catch (MalformedURLException e) {
-			fail();
-		}
+			public Map<String, String> extract(String source) {
+				assertEquals(source, filename);
+				return emptyMap;
+			}
+		});
+		extractor.extract(imageFile);
 	}
 	@Test
 	public void testHTTPURL() {
+		ImageFile imageFile;
 		try {
-			ImageFile imageFile = new ImageFile(new URL("http://cellprofiler.org/linked_files/foo.jpg"));
+			imageFile = new ImageFile(new URI("http://cellprofiler.org/linked_files/foo.jpg"));
 			FileNameMetadataExtractor extractor = new FileNameMetadataExtractor(new MetadataExtractor<String>() {
-
+	
 				public Map<String, String> extract(String source) {
 					assertEquals(source, "foo.jpg");
 					return emptyMap;
 				}
 			});
 			extractor.extract(imageFile);
-		} catch (MalformedURLException e) {
+		} catch (URISyntaxException e) {
 			fail();
 		}
 	}
