@@ -15,8 +15,8 @@ package org.cellprofiler.imageset.filter;
 import static org.junit.Assert.*;
 
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import org.cellprofiler.imageset.ImageFile;
 import org.cellprofiler.imageset.ImagePlane;
@@ -38,11 +38,9 @@ public class TestPathPredicate {
 		String expectedPath = root.getAbsolutePath();
 		try {
 			pred.setSubpredicates(Expects.expects(expectedPath));
-			ImageFile imgfile = new ImageFile(fileAtPath.toURI().toURL());
+			ImageFile imgfile = new ImageFile(fileAtPath.toURI());
 			ImagePlaneDetails imgplane = new ImagePlaneDetails(new ImagePlane(imgfile), null);
 			pred.eval(imgplane);
-		} catch (MalformedURLException e) {
-			fail("Oops");
 		} catch (BadFilterExpressionException e) {
 			fail("Path predicate takes a subpredicate.");
 		}
@@ -52,13 +50,14 @@ public class TestPathPredicate {
 		PathPredicate pred = new PathPredicate();
 		try {
 			pred.setSubpredicates(Expects.expects("http://www.cellprofiler.org/linked_files"));
-			ImageFile imgfile = new ImageFile(new URL("http://www.cellprofiler.org/linked_files/bar.jpg"));
+			ImageFile imgfile = new ImageFile(new URI("http://www.cellprofiler.org/linked_files/bar.jpg"));
 			ImagePlaneDetails imgplane = new ImagePlaneDetails(new ImagePlane(imgfile), null);
 			pred.eval(imgplane);
-		} catch (MalformedURLException e) {
-			fail("Oops");
 		} catch (BadFilterExpressionException e) {
 			fail("Path predicate takes a subpredicate.");
+		} catch (URISyntaxException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
 		}
 	}
 }
